[package]
name = "gua64"
version = "0.0.2"
authors = ["Li ZongYing <lizongying@msn.com>"]
edition = "2024"
description = "六十四卦編碼，rust實現 如：“hello，世界”會編碼為“䷯䷬䷿䷶䷸䷬䷀䷌䷌䷎䷼䷲䷰䷳䷸䷘䷔䷭䷒〇”"
readme = "README.md"
license = "MIT"
repository = "https://github.com/lizongying/rs-gua64"
homepage = "https://lizongying.github.io/js-gua64/"
documentation = "https://lizongying.github.io/rs-gua64/"
keywords = ["gua64"]

[dependencies]
